fixed issue with extra brackets and removed next param + call from each controller function - need to understand why these arenrt allowed with hbs as are with ejs

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
@@ -10,10 +11,11 @@
     <link rel="stylesheet" type="text/css" href="/iconfont/material-icons.css" />
     <link rel="stylesheet" type="text/css" href="/matIconFix/index.css" />
     <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
-    <title>njsWebSvr</title>
+    <title>{{title}}</title>
 </head>
 
 <body>
+    <h2>{{title}}</h2>
     {{{body}}}
 </body>
 
