--- a/views/partials/hatedChamps.hbs
+++ b/views/partials/hatedChamps.hbs
@@ -1,4 +1,4 @@
-<h2>Liste of my most hated League champions</h2>
+<h2>{{title}}</h2>
 <ul>
     <li class="midlaner">Yasuo</li>
     <li class="midlaner">Zoe</li>
