--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -8,6 +8,7 @@
     <meta name="author" content="njsWebSvr" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/register.css" />
     <link rel="stylesheet" type="text/css" href="/iconfont/material-icons.css" />
     <link rel="stylesheet" type="text/css" href="/matIconFix/index.css" />
     <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
@@ -15,7 +16,6 @@
 </head>
 
 <body>
-    <h2>{{title}}</h2>
     {{{body}}}
 </body>
 
