create new login functionallity

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,21 +4,24 @@
     user-select: none;
     box-sizing: border-box;
     font-family: Arial, Verdana, Helvetica, Tahoma, Trebuchet MS, Times New Roman,
-      Georgia, Garamond, Courier New, Brush Script MT;
+        Georgia, Garamond, Courier New, Brush Script MT;
     --themeBgColorLight: #333;
     --themeBgColorDark: #111;
     --themeFColor: #fff;
     --themeBtnMskColor: #454a50;
 }
+
 html {
-      height: 100%;
+    height: 100%;
 }
+
 body {
     height: 100%;
     background-color: var(--themeBgColorLight);
     color: var(--themeFColor);
 }
-input[type = text] {
+
+input {
     width: 100%;
     color: var(--themeFColor);
     border: none;
@@ -27,19 +30,23 @@ input[type = text] {
     padding: 5px;
     border-bottom: 1px solid var(--themeBgColorDark);
 }
-input[type = text]:focus {
+
+input:focus {
     outline: none;
     /* background-color: rgb(255,255,255,0.6); */
 }
-input[type = submit] {
+
+input[type=submit] {
     background-color: var(--themeBtnMskColor);
     color: var(--themeFColor);
     border: none;
     padding: 8px 12px;
 }
-input[type = submit]:hover {
+
+input[type=submit]:hover {
     cursor: pointer;
 }
+
 .heading {
     text-align: center;
     background-color: var(--themeBgColorDark);
@@ -63,4 +70,3 @@ li {
 .toplaner {
     background-color: #ffea00
 }
-
