--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,15 +1,15 @@
-    <div class="container">
-        <div class="pannel">
-            <form action="/register" method="POST">
-                <div class="heading">REGISTER</div>
-                <input type="text" id="forename" name="forename" placeholder="Forename" required>
-                <input type="text" id="surname" name="surname" placeholder="Surname"  required>
-                <input type="text" id="email" name="email" placeholder="Email"  required>
-                <input type="text" id="password" name="password" placeholder="Password"  required>
-                <input type="text" id="password2" name="password2" placeholder="Confirm Password"  required>
-                <div class="btnBar">
-                    <input type="submit" id="register" name="register">
-                </div>
-            </form>
-        </div>
+<div class="container">
+    <div class="pannel">
+        <form action="/register" method="POST">
+            <div class="heading">REGISTER</div>
+            <input type="text" id="forename" name="forename" placeholder="Forename" required>
+            <input type="text" id="surname" name="surname" placeholder="Surname" required>
+            <input type="text" id="email" name="email" placeholder="Email" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <input type="password" id="password2" name="password2" placeholder="Confirm Password" required>
+            <div class="btnBar">
+                <input type="submit" id="register" name="register">
+            </div>
+        </form>
     </div>
+</div>
