signIn functionality now working

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="pannel">
         <form action="/register" method="POST">
-            <div class="heading">REGISTER</div>
+            <div class="heading">Register</div>
             <input type="text" id="forename" name="forename" placeholder="Forename" required>
             <input type="text" id="surname" name="surname" placeholder="Surname" required>
             <input type="text" id="email" name="email" placeholder="Email" required>
