--- a/views/signIn.hbs
+++ b/views/signIn.hbs
@@ -1,1 +1,12 @@
-<h1>Sign In Existing User</h1>
+<div class="container">
+    <div class="pannel">
+        <form action="/signIn" method="POST">
+            <div class="heading">Sign In</div>
+            <input type="text" id="email" name="email" placeholder="Email" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <div class="btnBar">
+                <input type="submit" id="signIn" name="signIn">
+            </div>
+        </form>
+    </div>
+</div>
