return user info to as quey params of response object

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,7 @@ input {
 
 input:focus {
     outline: none;
-    /* background-color: rgb(255,255,255,0.6); */
+    /* background-color: var(--themeBgColorlight); */
 }
 
 input[type=submit] {
@@ -45,6 +45,14 @@ input[type=submit] {
 
 input[type=submit]:hover {
     cursor: pointer;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: #fff !important;
 }
 
 .heading {
