--- a/views/pages/register.hbs
+++ b/views/pages/register.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="pannel">
-        <form action="/register" method="POST">
+        <form action="/api/auth/register" method="POST">
             <div class="heading">Register</div>
             <input type="text" id="forename" name="forename" placeholder="Forename" required>
             <input type="text" id="surname" name="surname" placeholder="Surname" required>
