--- a/views/pages/signIn.hbs
+++ b/views/pages/signIn.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="pannel">
-        <form action="/signIn" method="POST">
+        <form action="/api/auth/signIn" method="POST">
             <div class="heading">Sign In</div>
             <input type="text" id="email" name="email" placeholder="Email" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
