--- a/views/pages/register.hbs
+++ b/views/pages/register.hbs
@@ -1,3 +1,5 @@
+{{> navbar }}
+<h3>Register</h3>
 <div class="container">
     <div class="pannel">
         <form action="/api/auth/register" method="POST">
