--- a/views/pages/signIn.hbs
+++ b/views/pages/signIn.hbs
@@ -1,3 +1,5 @@
+{{> navbar }}
+<h3>Sign In</h3>
 <div class="container">
     <div class="pannel">
         <form action="/api/auth/signIn" method="POST">
@@ -6,6 +8,9 @@
             <input type="password" id="password" name="password" placeholder="Password" required>
             <div class="btnBar">
                 <input type="submit" id="signIn" name="signIn">
+            </div>
+            <div class="btnBar">
+                <a href="/register" id="register" class="register">register</a>
             </div>
         </form>
     </div>
