--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,8 +7,9 @@
 </div>
 <div class="navBar" id="navBar">
     <p>{{auth}}</p>
+    {{!-- <div>{{ternary true "yes" "no"}}</div> --}}
     {{#each navbar.items}}
-    <a class="navPill navLink{{#if this.visible}}showMenuButton{{else}}hideMenuButton{{/if}}" href={{this.route}}>
+    <a class="navPill navLink {{ setVisibility this.visible auth }}" href={{this.route}}>
         <div class=" material-icons icon">
             {{this.matIcon}}
         </div>
