--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" href="/iconfont/material-icons.css" />
         <link rel="stylesheet" type="text/css" href="/matIconFix/index.css" />
         <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
+        <script defer type="text/javascript" src="/js/navBar.js"></script>
         <title>{{title}}</title>
     </head>
     <body>
