--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <div class="burger-container">
-    <div class="burger">
+    <div class="burger" onclick="toggle()">
         <div class="burger-line burger-line-top"></div>
         <div class="burger-line burger-line-middle"></div>
         <div class="burger-line burger-line-bottom"></div>
@@ -8,7 +8,7 @@
 <div class="navBar" id="navBar">
     {{#each navbar.items}}
     <a class="navPill navLink {{ setVisibility this.visible ../auth }}" href={{this.route}}>
-        <div class=" material-icons icon">
+        <div class="material-icons icon">
             {{this.matIcon}}
         </div>
         <div class="iconLabel">
