--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="keywords" content="HTML, CSS, JavaScript" />
-        <meta name="description" content="njsWebSvr" />
-        <meta name="author" content="njsWebSvr" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="/css/style.css" />
-        <link rel="stylesheet" type="text/css" href="/css/navBar.css" />
-        <link rel="stylesheet" type="text/css" href="/css/register.css" />
-        <link rel="stylesheet" type="text/css" href="/css/signIn.css" />
-        <link rel="stylesheet" type="text/css" href="/css/product.css" />
-        <link rel="stylesheet" type="text/css" href="/iconfont/material-icons.css" />
-        <link rel="stylesheet" type="text/css" href="/matIconFix/index.css" />
-        <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
-        <script defer type="text/javascript" src="/js/navBar.js"></script>
-        <title>{{title}}</title>
-    </head>
-    <body>
-        {{{body}}}
-    </body>
+
+<head>
+    {{!--
+    <meta charset="UTF-8" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="description" content="njsWebSvr" />
+    <meta name="author" content="njsWebSvr" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/navBar.css" />
+    <link rel="stylesheet" type="text/css" href="/css/register.css" />
+    <link rel="stylesheet" type="text/css" href="/css/signIn.css" />
+    <link rel="stylesheet" type="text/css" href="/css/product.css" />
+    <link rel="stylesheet" type="text/css" href="/iconfont/material-icons.css" />
+    <link rel="stylesheet" type="text/css" href="/matIconFix/index.css" />
+    <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
+    <script defer type="text/javascript" src="/js/navBar.js"></script>
+    <title>{{title}}</title> --}}
+    {{> genericHead }}
+</head>
+
+<body>
+    {{{body}}}
+</body>
+
 </html>
