--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <div class="burger-container">
-    <div class="burger" onclick="toggle()">
+    <div class="burger" onclick="toggleNavPills()">
         <div class="burger-line burger-line-top"></div>
         <div class="burger-line burger-line-middle"></div>
         <div class="burger-line burger-line-bottom"></div>
