Created Product data and Product Card handlebars view

--- a/views/pages/product.hbs
+++ b/views/pages/product.hbs
@@ -1,7 +1,4 @@
 {{> navbar }}
-<h3>Products</h3>
-<div>
-  {{#each products}}
-  <div>{{name}}</div>
-  {{/each}}
-</div>
+{{#each products}}
+  {{> productCard }}
+{{/each}}
