--- a/public/css/signIn.css
+++ b/public/css/signIn.css
@@ -1,14 +1,17 @@
-.container{
+.container {
     height: 100%;
     display: grid;
     grid-template-rows: auto 500px auto;
     grid-template-columns: auto 500px auto;
 }
+
 .pannel {
     grid-row: 2 / 2;
     grid-column: 2 / 2;
 }
+
 .btnBar {
-    padding: 5px;
-    text-align: right;
+    padding: 0px 0px 0px 0px;
+    text-align: center;
+    margin: 0px 0px 2px 0px;
 }
