--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,10 +21,12 @@ body {
     background-color: var(--themeBgColorLight);
     color: var(--themeFColor);
 }
+
 a {
     color: var(--themeFColor);
     text-decoration: none;
 }
+
 input {
     width: 100%;
     color: var(--themeFColor);
@@ -65,6 +67,12 @@ input:-webkit-autofill:active {
     padding: 10px 0px;
 }
 
-@media only screen and (min-width: 768px) {
-    
+.btn {
+    display: block;
+    text-decoration: none;
+    background-color: var(--themeBtnMskColor);
+    color: var(--themeFColor);
+    border: none;
+    padding: 8px 12px;
+    font-size: small;
 }
