--- a/views/partials/genericHead.hbs
+++ b/views/partials/genericHead.hbs
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="/css/register.css" />
 <link rel="stylesheet" type="text/css" href="/css/signIn.css" />
 <link rel="stylesheet" type="text/css" href="/css/product.css" />
+<link rel="stylesheet" type="text/css" href="/css/productCard.css" />
 <link rel="stylesheet" type="text/css" href="/iconfont/material-icons.css" />
 <link rel="stylesheet" type="text/css" href="/matIconFix/index.css" />
 <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
