added in product details page

--- a/views/pages/product.hbs
+++ b/views/pages/product.hbs
@@ -1,4 +1,7 @@
 {{> navbar }}
-{{#each products}}
-  {{> productCard }}
-{{/each}}
+<div>Id: {{product.id}}</div>
+<div>Name: {{product.name}}</div>
+<div>Description: {{product.description}}</div>
+<div>Image: {{product.image}}</div>
+<div>Cost: {{product.unitCost}}</div>
+
