add carousel component

--- a/views/partials/genericHead.hbs
+++ b/views/partials/genericHead.hbs
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" type="text/css" href="/css/style.css" />
 <link rel="stylesheet" type="text/css" href="/css/navBar.css" />
+<link rel="stylesheet" type="text/css" href="/css/carousel.css" />
 <link rel="stylesheet" type="text/css" href="/css/register.css" />
 <link rel="stylesheet" type="text/css" href="/css/signIn.css" />
 <link rel="stylesheet" type="text/css" href="/css/product.css" />
@@ -13,4 +14,5 @@
 <link rel="stylesheet" type="text/css" href="/matIconFix/index.css" />
 <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
 <script defer type="text/javascript" src="/js/navBar.js"></script>
+<script defer type="text/javascript" src="/js/carousel.js"></script>
 <title>{{title}}</title>
