--- a/views/pages/home.hbs
+++ b/views/pages/home.hbs
@@ -1,4 +1,5 @@
 {{> navbar }}
-{{> carousel slides = carousel.items.length slide = 0 }}
+{{!-- {{> carousel slides = carousel.items.length slide = 0 }} --}}
+{{> carousel }}
 
 
