--- a/views/pages/products.hbs
+++ b/views/pages/products.hbs
@@ -1,4 +1,6 @@
 {{> navbar }}
-{{#each products}}
-  {{> productCard }}
-{{/each}}
+<div class="productContainer">
+  {{#each products}}
+    {{> productCard }}
+  {{/each}}
+</div>
