--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -17,7 +17,7 @@
     <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
     <script defer type="text/javascript" src="/js/navBar.js"></script>
     <title>{{title}}</title> --}}
-    {{> genericHead }}
+    {{> head }}
 </head>
 
 <body>
