--- a/views/partials/carousel.hbs
+++ b/views/partials/carousel.hbs
@@ -1,4 +1,4 @@
-<div class="carouselContainer">
+{{!-- <div class="carouselContainer">
     {{#each carousel.items}}
 		<div class="slides fade">
 			<div class="numbertext">
@@ -10,7 +10,21 @@
 			</div>
 		</div>
 	{{/each}}
+</div> --}}
+<div class="carousel">
+    {{#each carousel.items}}
+        {{!-- <div class="numbertext">
+            {{ currentSlide @index }} / {{ ../slides }}
+        </div> --}}
+        {{!-- <img src="{{ this.image }}" class="slide kenburns-top-right"> --}}
+        <div class="slide kenburns-top-right" style="background-image: url('{{this.image}}')"></div>
+        {{!-- <div class="text">
+            {{ this.caption }}
+        </div> --}}
+	{{/each}}
 </div>
 
-
+{{!-- <div class="carousel">
+  <div class="slide kenburns-top-right" style="background-image: url({{carousel?.items[slide]?.image}});"></div>
+</div> --}}
 
