--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="/css/carousel.css" />
 <link rel="stylesheet" type="text/css" href="/css/register.css" />
 <link rel="stylesheet" type="text/css" href="/css/signIn.css" />
+<link rel="stylesheet" type="text/css" href="/css/products.css" />
 <link rel="stylesheet" type="text/css" href="/css/product.css" />
 <link rel="stylesheet" type="text/css" href="/css/productCard.css" />
 <link rel="stylesheet" type="text/css" href="/iconfont/material-icons.css" />
