Add lightbox partial and include on Product Details Page

--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,10 +1,10 @@
-.productContainer{
+.productsContainer{
     padding: 5px 10px;
     display: flex;
     flex-direction: column;
 }
 @media only screen and (min-width: 768px) {
-    .productContainer {
+    .productsContainer {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
