--- a/views/pages/products.hbs
+++ b/views/pages/products.hbs
@@ -1,5 +1,5 @@
 {{> navbar }}
-<div class="productContainer">
+<div class="productsContainer">
   {{#each products}}
     {{> productCard }}
   {{/each}}
