--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="/css/products.css" />
 <link rel="stylesheet" type="text/css" href="/css/product.css" />
 <link rel="stylesheet" type="text/css" href="/css/productCard.css" />
+<link rel="stylesheet" type="text/css" href="/css/lightBox.css" />
 <link rel="stylesheet" type="text/css" href="/iconfont/material-icons.css" />
 <link rel="stylesheet" type="text/css" href="/matIconFix/index.css" />
 <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
