--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -17,4 +17,5 @@
 <link rel="icon" href="/favicon/favicon.ico?v=2" type="image/x-icon" />
 <script defer type="text/javascript" src="/js/navBar.js"></script>
 <script defer type="text/javascript" src="/js/carousel.js"></script>
+<script defer type="text/javascript" src="/js/lightBox.js"></script>
 <title>{{title}}</title>
