--- a/views/partials/lightBox.hbs
+++ b/views/partials/lightBox.hbs
@@ -1,11 +1,13 @@
 <div class="lightBoxContainer">
-    <div class="lightBoxImage" style="background-image: url('{{product.image}}')"></div>
-    <div class="lightBoxThumbnailContainer">
+    <div id="lightBoxImage" class="lightBoxImage" style="background-image: url('{{product.image}}')"></div>
+    <div id="lightBoxThumbnailContainer" class="lightBoxThumbnailContainer">
     {{#each product.gallery}}
-        <div class="lightBoxThumbnail" style="background-image: url('{{this}}')"></div>
+        <div class="lightBoxThumbnail"
+            {{{createImageId @index}}}
+            style="background-image: url('{{this}}')" >
+        </div>
     {{/each}}
     </div>
-
 </div>
 
 
