--- a/views/partials/lightBox.hbs
+++ b/views/partials/lightBox.hbs
@@ -1,9 +1,13 @@
 <div class="lightBoxContainer">
-    <div id="lightBoxImage" class="lightBoxImage" style="background-image: url('{{product.image}}')"></div>
-    <div id="lightBoxThumbnailContainer" class="lightBoxThumbnailContainer">
+    <div id="lightBoxImage"
+            class="lightBoxImage" 
+            style="background-image: url('{{product.image}}')">
+    </div>
+    <div id="lightBoxThumbnailContainer"
+            class="lightBoxThumbnailContainer">
     {{#each product.gallery}}
         <div class="lightBoxThumbnail"
-            {{{createImageId @index}}}
+            {{!-- {{{createImageId @index}}} --}}
             style="background-image: url('{{this}}')" >
         </div>
     {{/each}}
