--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,8 +5,8 @@
         <div class="burger-line burger-line-bottom"></div>
     </div>
 </div>
-<div class="navBar" id="navBar">
-    {{#each navbar.items}}
+<div class="navBar" id={{navBar.id}}>
+    {{#each navBar.items}}
     <a class="navPill navLink {{ setVisibility this.visible ../auth }}" href={{this.route}}>
         <div class="material-icons icon">
             {{this.matIcon}}
