component model and service now bring in root level fields aswell as item level - BUG FIX

--- a/views/partials/carousel.hbs
+++ b/views/partials/carousel.hbs
@@ -1,4 +1,4 @@
-<div class="carousel" id={{carousel.id}}>
+<div id={{carousel.id}} class="carousel" >
     {{#each carousel.items}}
         {{!-- <div class="numbertext">
             {{ currentSlide @index }} / {{ ../slides }}
@@ -11,20 +11,3 @@
         </div> --}}
 	{{/each}}
 </div>
-
-
-
-
-{{!-- <div class="carouselContainer">
-    {{#each carousel.items}}
-    <div class="slides fade">
-        <div class="numbertext">
-            {{ currentSlide @index }} / {{ ../slides }}
-        </div>
-        <img src="{{ this.image }}" class="slide">
-        <div class="text">
-            {{ this.caption }}
-        </div>
-    </div>
-    {{/each}}
-</div> --}}
