--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -5,8 +5,6 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    height: 400px;
-    /* width: 100%; */
     border: 1px solid black;
   }
   .slide {
@@ -16,7 +14,26 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-   .kenburns-top-right {
+  /* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.kenburns-top-right {
     -webkit-animation: kenburns-top-right 5s ease-out infinite both;
             animation: kenburns-top-right 5s ease-out infinite both;
   }
