--- a/public/css/lightBox.css
+++ b/public/css/lightBox.css
@@ -1,22 +1,20 @@
 .lightBoxContainer {
     border: 1px solid black;
     padding: 5px 10px;
-    margin: 0px 0px 5px 0px;
+    margin: 0px auto 5px auto;
+    width: 90%;
 }
 .lightBoxImage {
     height: 600px;
-    /* overflow: hidden; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    min-width: 300px;
 }
 .lightBoxThumbnailContainer {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* overflow: auto; */
-    /* overflow-x: scroll; */
-    /* overflow-y: scroll; */
     padding: 15px;
     /* height: 50px;
     height: 50px; */
