--- a/public/css/content.css
+++ b/public/css/content.css
@@ -2,7 +2,7 @@
     font-size: medium;
     font-weight: medium;
 }
-.contentBox {
+.contentContainer {
     display: flex;
     flex-direction: column;
 
@@ -14,7 +14,7 @@
     flex-wrap: wrap;
 }
 @media only screen and (min-width: 768px) {
-    .contentBox {
+    .contentContainer {
         flex-direction: row;
         flex-wrap: wrap;
     }
