--- a/views/pages/home.hbs
+++ b/views/pages/home.hbs
@@ -1,6 +1,6 @@
 {{> navbar }}
 {{!-- {{> carousel slides = carousel.items.length slide = 0 }} --}}
 {{> carousel }}
-{{> contentBox }}
+{{> content }}
 
 
