add viewHelper: general.js

--- a/views/partials/carousel.hbs
+++ b/views/partials/carousel.hbs
@@ -1,6 +1,6 @@
 <div id={{carousel.id}} class="carousel" >
     {{#each carousel.items}}
-        <div class="slide kenburns-top-right" {{{ styleSlide this.styles }}}>
+        <div class="slide kenburns-top-right" {{{ styleAttr this.styles }}}>
             {{!-- <div class="numbertext">
                 {{ currentSlide @index }} / {{ ../carousel.items.length}}
             </div>
