--- a/views/partials/content.hbs
+++ b/views/partials/content.hbs
@@ -1,12 +1,8 @@
-<div class="h3">Random Title</div>
 <div class="contentContainer">
-	<div>WTFF!!!!</div>
 	{{#each content.items}}
-		{{!-- {{ content this }} --}}
-		{{!-- <div class="col">{{this.text}}</div> --}}
-		{{!-- {{ currentSlide @index }} / {{ ../carousel.items.length}} --}}
-		<div>{{@index}}</div>
-    {{/each}}
-	{{!-- <div class="col">01. Content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text.</div>
-	<div class="col">02. Content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text, content Text.</div> --}}
+	<div class='col'>
+		<div class="h3">{{this.heading}}</div>
+		{{{ contentElement this}}}
+	</div>
+	{{/each}}
 </div>
