--- a/public/css/content.css
+++ b/public/css/content.css
@@ -5,13 +5,14 @@
 .contentContainer {
     display: flex;
     flex-direction: column;
-
+    flex-wrap: wrap;
 }
 .col {
     margin: 5px;
     padding: 5px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
 }
 @media only screen and (min-width: 768px) {
     .contentContainer {
