--- a/views/partials/content.hbs
+++ b/views/partials/content.hbs
@@ -1,38 +1,40 @@
 <div class="contentContainer">
 	{{#each content.items}}
-		<div class='col' {{{ styleAttr this.styles.contentContainer.col }}}>
-			{{#if this?.heading}}
-				<div class="h3" {{{ styleAttr this?.styles?.contentContainer?.col?.heading }}}>
-					{{this?.heading}}
-				</div>
-			{{/if}}
-			{{{contentItem this (styleAttr this?.styles?.contentContainer?.col?.heading)}}}
+	<div class='col' {{{ styleAttr this.styles.contentContainer.col }}}>
+		{{#if this?.heading}}
+		<div class="h3" {{{ styleAttr this?.styles?.contentContainer?.col?.heading }}}>
+			{{this?.heading}}
 		</div>
+		{{/if}}
+		{{contentItem this (styleAttr this?.styles?.contentContainer?.col?.content)}}
+		{{!-- {{{contentItem this (styleAttr this?.styles?.contentContainer?.col?.content)}}} --}}
+	</div>
 	{{/each}}
 	{{!-- {{#each content.items}}
 	<div class='col' {{{ styleAttr this?.styles?.contentContainer?.col }}}>
 		{{#if this?.heading}}
-			<div class="h3" {{{ styleAttr this?.styles?.contentContainer?.col?.heading }}}>{{this?.heading}}</div>
+		<div class="h3" {{{ styleAttr this?.styles?.contentContainer?.col?.heading }}}>{{this?.heading}}</div>
 		{{/if}} --}}
 		{{!-- {{#contentItem content.items }}
-			{{ content }}
+		{{ content }}
 		{{/contentItem}} --}}
-    	{{!-- {{> contentItem  styles = {{ styleAttr this?.styles?.contentContainer?.col?.content}} }} --}}
+		{{!-- {{> contentItem styles = {{ styleAttr this?.styles?.contentContainer?.col?.content}} }} --}}
 		{{!-- {{{ contentItem this }}} --}}
 		{{!-- {{#if isText(this.contentType)}}
-  			<div class="content" {{{ styleAttr this?.styles?.contentContainer?.col?.content }}}>{{this?.content}}</div>
+		<div class="content" {{{ styleAttr this?.styles?.contentContainer?.col?.content }}}>{{this?.content}}</div>
 		{{/if}} --}}
 		{{!-- {{#if this?.contentType ==="text"}}
-			<div class="content" {{{ styleAttr this?.styles?.contentContainer?.col?.content }}}>{{this?.content}}</div>
+		<div class="content" {{{ styleAttr this?.styles?.contentContainer?.col?.content }}}>{{this?.content}}</div>
 		{{/if}} --}}
 		{{!-- {{#if this?.contentType ==="image"}}
-			<div class="content" {{{ styleAttr this?.styles?.contentContainer?.col?.content }}}></div>
+		<div class="content" {{{ styleAttr this?.styles?.contentContainer?.col?.content }}}></div>
 		{{/if}} --}}
 		{{!-- {{#if this?.contentType ==="card"}}
-			<div class="content" {{{ styleAttr this?.styles?.contentContainer?.col?.content }}}></div>
+		<div class="content" {{{ styleAttr this?.styles?.contentContainer?.col?.content }}}></div>
 		{{/if}} --}}
 
 		{{!-- {{{ contentElement this}}} --}}
-	{{!-- </div>
+		{{!--
+	</div>
 	{{/each}} --}}
 </div>
